[gd_scene load_steps=4 format=3 uid="uid://y86k7itou2c3"]

[ext_resource type="Script" path="res://Menu.gd" id="1_0fvlb"]
[ext_resource type="Texture2D" uid="uid://crimejxs4hsgh" path="res://weaver.png" id="3_4ryq8"]
[ext_resource type="AudioStream" uid="uid://bvyrkdr4hrqya" path="res://this unreleased track is a W but im never going to release it [inigo.z edit].wav" id="3_da4cc"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fvlb")

[node name="TitleScreen" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.576, 0.648)
texture = ExtResource("3_4ryq8")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 502.0
offset_right = 152.0
offset_bottom = 603.0

[node name="NewGameButton" type="Button" parent="Menu"]
layout_mode = 2
text = "New Game"

[node name="OptionsButton" type="Button" parent="Menu"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="Menu"]
layout_mode = 2
text = "Exit"

[node name="TitleTrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_da4cc")
volume_db = -80.0
autoplay = true
bus = &"Music"

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -73.0
offset_right = 70.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoButton" type="Button" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Video"

[node name="AudioButton" type="Button" parent="Options/VBoxContainer2"]
layout_mode = 2
text = "Audio"

[node name="BackOptionsButton" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -44.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -40.0
offset_right = 55.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "FullScreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Borderless"

[node name="Vsync" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreenCheck" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="BorderlessCheck" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="VsyncCheck" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="BackFromVideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.5
offset_top = -38.5
offset_right = 205.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Music"

[node name="Sound FX" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterSlider" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 3

[node name="MusicSlider" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 3

[node name="SoundFXSlider" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackFromAudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="Menu/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Menu/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Options/VBoxContainer2/VideoButton" to="." method="_on_video_button_pressed"]
[connection signal="pressed" from="Options/VBoxContainer2/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="Options/BackOptionsButton" to="." method="_on_back_options_button_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreenCheck" to="." method="_on_full_screen_check_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/BorderlessCheck" to="." method="_on_borderless_check_toggled"]
[connection signal="pressed" from="Video/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/SoundFXSlider" to="." method="_on_sound_fx_slider_value_changed"]
[connection signal="pressed" from="Audio/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
